--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
 
 /* Links */
 a, a:visited {
+  color: inherit;
   text-decoration: none;
   display: inline-block;
 }
@@ -113,6 +114,11 @@ body {
 }
 .backtop-btn:hover {
   transform: scale(1.4);
+}
+
+.error {
+  color: red;
+  font-size: 14px;
 }
 
 /* Grid styles */
@@ -480,6 +486,24 @@ h2.grad-border {
   margin-bottom: 15px;
 }
 
+.mix-block__controls {
+  margin-bottom: 33px;
+}
+
+.mix-block__btn {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.3;
+  color: #9ec2d0;
+  background-color: transparent;
+}
+.mix-block__btn:not(:last-child) {
+  margin-right: 70px;
+}
+.mix-block__btn.control-active {
+  color: #000;
+}
+
 .portfolio-card {
   position: relative;
   max-width: 350px;
@@ -571,8 +595,8 @@ h2.grad-border {
   height: 60px;
   overflow: hidden;
 }
-.portfolio-card__text h3,
-.portfolio-card__text p {
+.portfolio-card__text .portfolio-card__title,
+.portfolio-card__text .portfolio-card__desc {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
