--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import "./blocks/links";
 @import "./blocks/socials";
 @import "./blocks/header-about";
+@import "./blocks/mix-block";
 @import "./blocks/portfolio-card";
 @import "./blocks/timeline-item";
 @import "./blocks/form";
