CSS .contact-form__success answer style

--- a/sass/media/_tablet-big.scss
+++ b/sass/media/_tablet-big.scss
@@ -48,7 +48,8 @@
     .header-about .socials {
         column-gap: 20px;
 
-        svg, object {
+        svg,
+        object {
             width: 48px;
             height: 48px;
         }
@@ -72,8 +73,8 @@
     }
 
     .header {
-       padding-top: 0;
-       padding-bottom: 0;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .header-intro__title {
@@ -84,7 +85,7 @@
         padding-top: 5px;
         max-width: 420px;
     }
-    
+
     .header-intro__desc {
         margin-bottom: 28px;
 
@@ -92,7 +93,7 @@
             font-size: 18px;
         }
 
-        p + p {
+        p+p {
             margin-top: 10px;
         }
     }
@@ -122,30 +123,30 @@
         z-index: 1;
         position: relative;
     }
-    
+
     .header-about__content {
         column-gap: 30px;
     }
-    
+
     .header-about__column {
-        
+
         &:first-child {
             width: 495px;
         }
-    
+
         &:last-child {
             margin-left: 0;
         }
     }
-    
+
     .header-about__subtitle {
         margin-bottom: 20px;
     }
-    
+
     .header-about__skills li {
         font-size: 18px;
     }
-    
+
     .header-about__socials {
         margin-bottom: 16px;
     }
@@ -155,17 +156,17 @@
         padding-top: 40px;
         padding-bottom: 61px;
     }
-    
+
     .portfolio__title {
         margin-bottom: 40px;
     }
-    
+
     .portfolio__cards {
         row-gap: 40px;
     }
 
     /**** Portfolio-card ****/
-    
+
     .portfolio-card {
         width: 270px;
         height: 224px;
@@ -173,22 +174,22 @@
 
     .portfolio-card__img {
         margin-bottom: 10px;
-    
+
         img {
             width: 270px;
             height: 169px;
         }
     }
-    
+
     .portfolio-card__text {
         height: 45px;
     }
-    
+
     .portfolio-card__title {
         margin-bottom: 4px;
         font-size: 18px;
     }
-    
+
     .portfolio-card__desc {
         font-size: 14px;
     }
@@ -197,7 +198,7 @@
     .portfolio-card:nth-child(2) {
         width: 420px;
         height: 366px;
-    
+
         .portfolio-card__img {
             margin-bottom: 20px;
         }
@@ -205,7 +206,7 @@
         .portfolio-card__img span {
             font-size: 18px;
         }
-    
+
         img {
             width: 420px;
             height: 288px;
@@ -230,7 +231,7 @@
         padding-top: 65px;
         padding-bottom: 65px;
     }
-    
+
     .timeline__header {
         margin-bottom: 50px;
     }
@@ -238,14 +239,15 @@
     .timeline-wrapper {
         width: 774px;
     }
-    
+
     .timeline-item__title {
         font-size: 20px;
     }
 
-    .timeline-item { 
+    .timeline-item {
 
-        &:first-child::before, &:first-child::after {
+        &:first-child::before,
+        &:first-child::after {
             top: 1px;
         }
 
@@ -255,12 +257,13 @@
             &:not(:last-child) {
                 margin-bottom: 10px;
             }
-        } 
+        }
 
-        p, strong {
+        p,
+        strong {
             font-size: 14px;
         }
-    
+
     }
 
     /***** Contacts *****/
@@ -268,39 +271,39 @@
         padding-top: 40px;
         padding-bottom: 66px;
     }
-    
+
     .contacts__header {
         margin-bottom: 40px;
     }
-    
+
     .contacts__list {
         margin-bottom: 25px;
-    
-        li + li {
+
+        li+li {
             margin-top: 16px;
         }
-    
+
         span {
             width: 85px;
             font-size: 18px;
         }
-    
+
         a {
             margin-left: 36px;
             font-size: 18px;
         }
     }
-    
+
     .contacts__text {
         width: 420px;
-    
+
         font-size: 16px;
 
-        p + p {
+        p+p {
             margin-top: 5px;
         }
     }
-    
+
     .contact-form::before {
         top: -95px;
     }
@@ -310,16 +313,21 @@
         width: 400px;
     }
 
+    .contact-form__success {
+        font-size: 16px;
+    }
+
+
     /***** Footer *****/
     .footer {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    
+
     .footer__copyright {
         font-size: 14px;
     }
-    
+
     .footer__date {
         margin-bottom: 10px;
         font-size: 16px;
