--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -339,6 +339,10 @@
         display: none;
     }
 
+    .contact-form__success {
+        font-size: 14px;
+    }
+
     /***** Footer *****/
     .footer__copyright {
         width: 738px;
