--- a/css/main.css
+++ b/css/main.css
@@ -503,6 +503,9 @@ h2.grad-border {
 .mix-block__btn.control-active {
   color: #000;
 }
+.mix-block__btn:hover, .mix-block__btn:active {
+  color: #ff543e;
+}
 
 .portfolio-card {
   position: relative;
@@ -775,6 +778,12 @@ h2.grad-border {
   border-bottom-color: #e5e5e5;
 }
 
+.contact-form__success {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.6;
+}
+
 .header-top {
   padding-top: 63px;
   padding-bottom: 62px;
@@ -935,7 +944,8 @@ h2.grad-border {
     -moz-column-gap: 20px;
          column-gap: 20px;
   }
-  .header-about .socials svg, .header-about .socials object {
+  .header-about .socials svg,
+  .header-about .socials object {
     width: 48px;
     height: 48px;
   }
@@ -1100,7 +1110,8 @@ h2.grad-border {
   .timeline-item p:not(:last-child) {
     margin-bottom: 10px;
   }
-  .timeline-item p, .timeline-item strong {
+  .timeline-item p,
+  .timeline-item strong {
     font-size: 14px;
   }
   /***** Contacts *****/
@@ -1138,6 +1149,9 @@ h2.grad-border {
   .contact-form {
     padding: 40px 50px;
     width: 400px;
+  }
+  .contact-form__success {
+    font-size: 16px;
   }
   /***** Footer *****/
   .footer {
@@ -1421,6 +1435,9 @@ h2.grad-border {
   }
   .contact-form::before {
     display: none;
+  }
+  .contact-form__success {
+    font-size: 14px;
   }
   /***** Footer *****/
   .footer__copyright {
