--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -104,3 +104,10 @@
         border-bottom-color: #e5e5e5;
     }
 }
+
+
+.contact-form__success {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.6;
+}
