--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,7 @@
 @import "./base/typography";
 @import "./base/icons";
 @import "./base/logo";
-@import "./base/links";
+@import "./base/components";
 @import "./base/nav-icon";
 @import "./base/button";
 
