--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
-    color: $black-color;
+    font-family: $font-main;
+    color: $text-color;
     font-size: 16px;
     line-height: 1.3;
 }
@@ -13,50 +13,7 @@ body {
     overflow: hidden;
 }
 
-.backtop-btn {
-    z-index: 100;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    bottom: 15px;
-    right: 10px;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background-color: $accent-color;
-    transition: transform 0.2s ease-in;
-
-    img {
-        width: 24px;
-        height: 24px;
-    }
-
-    &:hover {
-        transform: scale(1.4);
-    }
-}
-
-.error {
-    color: red;
-    font-size: 14px;
-}
-
-/* Utility */
 .none {
     display: none !important;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-    -webkit-box-shadow: 0 0 0px 1000px #fff inset;
-    box-shadow: 0 0 0px 1000px #fff inset;
-}
