--- a/sass/blocks/_header-intro.scss
+++ b/sass/blocks/_header-intro.scss
@@ -28,10 +28,7 @@
 
     p {
         font-size: 22px;
-        font-style: normal;
-        font-weight: 400;
         line-height: 1.6; /* 35.2px */
-        color: #000;
     }
 
     p + p {
@@ -49,7 +46,7 @@
 }
 
 .header-intro__img {
-    box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+    box-shadow: $img-shadow; 
 
     img {
         width: 475px;
