--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio {
     padding-top: 80px;
     padding-bottom: 90px;
-    background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
+    background: $portfolio-bg;
 }
 
 .portfolio__title {
