--- a/sass/media/_tablet-big.scss
+++ b/sass/media/_tablet-big.scss
@@ -19,7 +19,6 @@
 
     .section-title-42px {
         font-size: 32px;
-
     }
 
     .link {
@@ -45,16 +44,7 @@
         height: 28px;
     }
 
-    .header-about .socials {
-        column-gap: 20px;
-
-        svg,
-        object {
-            width: 48px;
-            height: 48px;
-        }
-    }
-
+    /**** Header-top ***/
     .header-top {
         padding-bottom: 60px;
     }
@@ -72,6 +62,7 @@
         font-size: 18px;
     }
 
+    /**** Header ***/
     .header {
         padding-top: 0;
         padding-bottom: 0;
@@ -93,7 +84,7 @@
             font-size: 18px;
         }
 
-        p+p {
+        p + p {
             margin-top: 10px;
         }
     }
@@ -122,6 +113,15 @@
         padding-bottom: 60px;
         z-index: 1;
         position: relative;
+    }
+
+    .header-about .socials {
+        column-gap: 20px;
+
+        svg, object {
+            width: 48px;
+            height: 48px;
+        }
     }
 
     .header-about__content {
@@ -166,7 +166,6 @@
     }
 
     /**** Portfolio-card ****/
-
     .portfolio-card {
         width: 270px;
         height: 224px;
@@ -259,8 +258,7 @@
             }
         }
 
-        p,
-        strong {
+        p, strong {
             font-size: 14px;
         }
 
@@ -316,7 +314,6 @@
     .contact-form__success {
         font-size: 16px;
     }
-
 
     /***** Footer *****/
     .footer {
