--- a/css/main.css
+++ b/css/main.css
@@ -1454,11 +1454,11 @@ select:-webkit-autofill:focus {
   .contact-form {
     padding: 35px 40px;
   }
-  .contact-form::before {
-    display: none;
-  }
   .contact-form__success {
     font-size: 14px;
+  }
+  .contacts__img {
+    display: none;
   }
   /***** Footer *****/
   .footer__copyright {
