--- a/sass/base/_components.scss
+++ b/sass/base/_components.scss
@@ -89,7 +89,8 @@ h2.grad-border {
 // Текст ошибки
 .error {
     color: $error-text;
-    font-size: 14px;
+    font-size: 18px;
+    font-weight: 700;
 }
 
 // Удаляет фон input при автозаполнении
