--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -8,7 +8,7 @@
 .contact-form__item {
     position: relative;
 
-    & + & {
+    &+& {
         margin-top: 42px;
     }
 
@@ -50,20 +50,23 @@
     width: 100%;
     border-bottom: 2px solid $input-default-border;
 
-    &:active, &:focus, &:valid {
+    &:active,
+    &:focus,
+    &:valid {
         font-weight: 700;
         font-size: 18px;
         line-height: 1;
         color: $input-text-color;
     }
 
-    &:active, &:focus {
+    &:active,
+    &:focus {
         border-bottom-color: $input-active-border;
     }
 
-    &:valid {
-        border-bottom-color: $input-muted-border;
-    }
+    // &:valid {
+    //     border-bottom-color: $input-muted-border;
+    // }
 }
 
 .contact-form__success {
