--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -198,6 +198,8 @@
     }
 
     textarea.form-input:valid {
+        padding-top: 10px;
+        padding-bottom: 10px;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.3;
