--- a/css/main.css
+++ b/css/main.css
@@ -508,19 +508,30 @@ select:-webkit-autofill:focus {
   max-width: 350px;
   height: 296px;
   color: #000;
+  cursor: pointer;
 }
 .portfolio-card a {
   color: #000;
 }
 
-.portfolio-card__img {
+.portfolio-card__link {
   margin-bottom: 16px;
+}
+.portfolio-card__link::before {
+  z-index: 5;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.portfolio-card__img {
   position: relative;
   overflow: hidden;
 }
 .portfolio-card__img::before {
   position: absolute;
-  z-index: 2;
+  z-index: 1;
   content: "";
   top: 0;
   left: 0;
@@ -562,7 +573,8 @@ select:-webkit-autofill:focus {
   height: 60px;
   overflow: hidden;
 }
-.portfolio-card__text .portfolio-card__title, .portfolio-card__text .portfolio-card__desc {
+.portfolio-card__text .portfolio-card__title,
+.portfolio-card__text .portfolio-card__desc {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
@@ -586,8 +598,8 @@ select:-webkit-autofill:focus {
   max-width: 540px;
   height: 463px;
 }
-.portfolio-card:first-child .portfolio-card__img,
-.portfolio-card:nth-child(2) .portfolio-card__img {
+.portfolio-card:first-child .portfolio-card__link,
+.portfolio-card:nth-child(2) .portfolio-card__link {
   margin-bottom: 20px;
 }
 .portfolio-card:first-child img,
@@ -598,9 +610,13 @@ select:-webkit-autofill:focus {
 .portfolio-card:first-child .portfolio-card__text,
 .portfolio-card:nth-child(2) .portfolio-card__text {
   height: 73px;
+  line-height: 1.3;
 }
 .portfolio-card:first-child .portfolio-card__title,
 .portfolio-card:nth-child(2) .portfolio-card__title {
+  display: inline-block;
+  position: relative;
+  z-index: 10;
   margin-bottom: 8px;
   font-size: 30px;
 }
@@ -617,7 +633,7 @@ select:-webkit-autofill:focus {
   color: #ff543e;
 }
 .portfolio-card:hover .portfolio-card__img span {
-  z-index: 3;
+  z-index: 2;
   opacity: 1;
 }
 
