--- a/sass/blocks/_portfolio-card.scss
+++ b/sass/blocks/_portfolio-card.scss
@@ -3,21 +3,33 @@
     max-width: 350px;
     height: 296px;
     color: $card-text;
+    cursor: pointer;
 
     a {
         color: $card-text;
     }
 }
 
-.portfolio-card__img {
+.portfolio-card__link {
     margin-bottom: 16px;
 
+    &::before {
+        z-index: 5;
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+    
+}
+
+.portfolio-card__img {
     position: relative;
     overflow: hidden;
 
     &::before {
         position: absolute;
-        z-index: 2;
+        z-index: 1;
         content: "";
         top: 0;
         left: 0;
@@ -64,7 +76,8 @@
     height: 60px;
     overflow: hidden;
 
-    .portfolio-card__title, .portfolio-card__desc {
+    .portfolio-card__title,
+    .portfolio-card__desc {
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 1;
@@ -90,7 +103,7 @@
     max-width: 540px;
     height: 463px;
 
-    .portfolio-card__img {
+    .portfolio-card__link {
         margin-bottom: 20px;
     }
 
@@ -101,9 +114,13 @@
 
     .portfolio-card__text {
         height: 73px;
+        line-height: 1.3;
     }
 
     .portfolio-card__title {
+        display: inline-block;
+        position: relative;
+        z-index: 10;
         margin-bottom: 8px;
         font-size: 30px;
     }
@@ -125,7 +142,7 @@
     }
 
     .portfolio-card__img span {
-        z-index: 3;
+        z-index: 2;
         opacity: 1;
     }
 }
