.portfolio-card__title correction

--- a/sass/blocks/_portfolio-card.scss
+++ b/sass/blocks/_portfolio-card.scss
@@ -87,6 +87,9 @@
 
 .portfolio-card__title {
     margin-bottom: 7px;
+    position: relative;
+    z-index: 10;
+    
     font-size: 24px;
     font-weight: 600;
 
