--- a/css/main.css
+++ b/css/main.css
@@ -589,6 +589,8 @@ select:-webkit-autofill:focus {
 
 .portfolio-card__title {
   margin-bottom: 7px;
+  position: relative;
+  z-index: 10;
   font-size: 24px;
   font-weight: 600;
   transition: color 0.2s ease-in;
